personal data done, saving progress

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -30,9 +30,38 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 //PC SHEET
   =============================
 .pc
-  .grid.personal-data
-    button.pictos(data-i18n-title='' name='act_toggle_attributes' title='player character attributes' type='action') y
-    h1(data-i18n='personal-data' data-i18-title='personal-data' title='personal data') personal data
+  .grid.personal-data.border
+    .section-header
+      h1(data-i18n='personal-data' data-i18-title='personal-data' title='personal data') personal data
+    .section-body
+      .grid.section-border
+        h2(data-i18n='') 1. last name, first name (and alias or code name if applicable)
+        label(data-i18-title="" title='last name, first name (and alias or code name if applicable)')
+          input(name='attr_name' placeholder='name' title='${name}' type='text')
+        .vert-line
+        h2(data-i18n='') 2. profession (rank if applicable)
+        label(data-i18-title="" title='profession (rank if applicable)')
+          input(name='attr_profession' placeholder='profession' title='${profession}' type='text')
+      .grid.section-border
+        h2(data-i18n='') 3. employer
+        label(data-i18-title="" title='employer')
+          input(name='attr_employer' placeholder='employer' title='${employer}' type='text')
+        .vert-line
+        h2(data-i18n='') 4. nationality
+        label(data-i18-title="" title='nationality')
+          input(name='attr_nationality' placeholder='nationality' title='${nationality}' type='text')
+      .grid.section-border
+        h2(data-i18n='') 5. sex
+        label(data-i18-title="" title='sex')
+          input(name='attr_sex' placeholder='sex' title='${sex}' type='text')
+        .vert-line
+        h2(data-i18n='') 6. age and d.o.b.
+        label(data-i18-title="" title='age and d.o.b.')
+          input(name='attr_age' placeholder='age and d.o.b.' title='${age}' type='text')
+        .vert-line
+        h2(data-i18n='') 7. education and occupational history
+        label(data-i18-title="" title='education')
+          input(name='attr_education' placeholder='education and occupational history' title='${education}' type='text')
 
 //NOTES SHEET
   =============================
