--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -5,7 +5,8 @@
         font-family: sans-serif;
     }
 
-    div.charsheet {
+    .charsheet {
+        @include back-color($accent2);
         min-width: 30em;
 
         button {
@@ -16,7 +17,7 @@
             &:hover,
             &:active {
                 background: none;
-                background-color: $accent1 !important;
+                background-color: $accent1;
             }
 
             &:focus > h2,
@@ -56,11 +57,9 @@
         }
 
         h2 {
-            font-size: 1em;
-            line-height: 1.4em;
-            &.sheet-alt-color {
-                color: $accent1;
-            }
+            @include text-trans(uppercase);
+            font-size: 0.8em;
+            line-height: 2em;
             &.sheet-label {
                 @include button-like();
                 text-align: center;
@@ -87,8 +86,8 @@
                 height       : 2.1em;
             }
             &::placeholder {
-                @include back-color($accent2);
-                border: 0.1em dotted $accent1;
+                @include back-color($palecolor);
+                border-top: hsl(148, 87%, 18%) 0.1em dashed;
             }
             &::-webkit-outer-spin-button,
             &::-webkit-inner-spin-button {
