--- a/Delta Green by Arc Dream Publishing/src/scss/_mixins.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_mixins.scss
@@ -5,7 +5,7 @@
         background-color: $color;
     }
 
-    @mixin grid-area($cstart, $cend, $rstart, $rend) {
+    @mixin grid-area($rstart, $cstart, $rend, $cend) {
         grid-area: #{$rstart} / #{$cstart} / #{$rend} / #{$cend};
     }
 
