--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -1,15 +1,18 @@
-
-// VARIABLES
-//  ============================= *
-    @import 'src/scss/_variables';
+// FUNCTIONS
+//    =============================
+    @import 'src/scss/_functions';
 
 // MIXINS
 //  =============================
     @import 'src/scss/_mixins';
 
-/* GLOBAL SETTINGS
-    =============================  */
-    @import 'src/scss/_globals';
+// VARIABLES
+//  =============================
+    @import 'src/scss/_variables';
+
+// GLOBAL SETTINGS
+//    =============================
+    @import 'src/scss/_globals';   
 
 /* FLEXBOX
    ============================= */
@@ -33,7 +36,6 @@
         display: inline-flex;
     }   
 
-
 /* HIDE DIFFERENT SHEET TYPES BY DEFAULT
    ============================= */ 
     div.sheet-npc,
@@ -49,9 +51,9 @@
 /* GRID
    ============================= */ 
     div.sheet-grid {
-        display        : inline-grid;
-        grid-column-gap: 0.2em;
-        grid-row-gap   : 0.2em;
+        display: inline-grid;
+        //grid-column-gap: 0.2em;
+        //grid-row-gap   : 0.2em;
     }
 
     div.sheet-grid-tab-inputs {
@@ -64,7 +66,6 @@
             }
         }
     }
-
 
 /* HIGHLIGHT BUTTONS
    ============================= */
@@ -122,17 +123,93 @@
 /* PC SHEET
    ============================= */
    div.sheet-pc {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 3em 1fr;
+
+        h1 {
+           font-size: 1em;
+           text-align: center;
+           transform: rotate(180deg);
+        }
+
+        h2 {
+            margin-left: 1%;
+        }
+
+        input[type="text"] {
+            text-align: left;
+            width: 100%;    
+        }
+
+        div.sheet-border {
+            border: 0.15em solid $maincolor;
+        }
+
+        div.sheet-section-header {
+           @include back-color($maincolor);
+           @include grid-area(1, 1, 1, 1);
+           text-orientation: sideways;
+           writing-mode: vertical-lr;
+        }
+
+        button.sheet-pictos {
+            @include grid-area(1, 1, 1, 1);
+            height: 1.5em;
+            width: 1.5em;
+            z-index: 2;
+        }
+
+        div.sheet-vert-line {
+            @include back-color($maincolor);
+        }
 
         div.sheet-personal-data {
             @include grid-area(1, 1, 3, 3);
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-            
-            h1 {
-                grid-template-columns: 1fr 1fr 1fr 3fr;
+            grid-template-columns: 3em 1fr;
+
+            div.sheet-section-border {
+                @for $i from 1 through 3 {
+                    &:nth-of-type(#{$i})  {  grid-row: $i / $i; }
+                }
+
+                &:nth-of-type(1),
+                &:nth-of-type(2)  {
+                    border-bottom: 0.15em solid $maincolor;
+                    grid-template-columns: 1fr 0.155em 1fr;
+
+                    //NAME & EMPLOYER
+                    h2:nth-of-type(1) {  grid-area: 1 / 1 / 1 / 3;  }
+                    label:nth-of-type(1)  { grid-area:  2 / 1 / 2 / 3; }
+
+                    div.sheet-vert-line { grid-area: 1 / 2 / 3 / 2;  }
+
+                    //PROFESSIONAL & NATIONALITY
+                    h2:nth-of-type(2)  { grid-area: 1 / 3 / 1 / 5;  }
+                    label:nth-of-type(2)  { grid-area: 2 / 3 / 2 / 5; }
+                }
+
+                &:nth-of-type(3) { 
+                    grid-template-columns: 1fr 0.155em 1fr 0.155em 3fr;
+
+                    //SEX
+                    h2:nth-of-type(1) { grid-area: 1 / 1 / 1 / 2; }
+                    label:nth-of-type(1)  { grid-area:  2 / 1 / 2 / 2; }
+                    div.sheet-vert-line:nth-of-type(1) { grid-area: 1 / 2 / 3 / 2; }
+
+                    //AGE
+                    h2:nth-of-type(2)  { grid-area: 1 / 3 / 1 / 5;   }
+                    label:nth-of-type(2)  { grid-area: 2 / 3 / 2 / 5; }
+                    div.sheet-vert-line:nth-of-type(2) { grid-area: 1 / 4 / 3 / 4;  }
+
+                    //EDUCATION
+                    h2:nth-of-type(3)  { grid-area: 1 / 5 / 1 / 5;   }
+                    label:nth-of-type(3)  { grid-area: 2 / 5 / 2 / 5; }
+                }
+
             }
         }
    }
+
+
 
 
    /* ATTRIBUTES
