--- a/Delta Green by Arc Dream Publishing/src/scss/_variables.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_variables.scss
@@ -6,7 +6,8 @@
    // COLORS
    	$maincolor: hsl(0, 6%, 0%);
     $accent1  : hsl(0, 0%, 96%);
-    $accent2  : hsla(253, 35%, 61%, 0.25);
-    $accent3  : #b9dadf;
+    $accent2  : hsl(24, 33%, 94%);
+    $accent3  : hsl(148, 87%, 18%);
+    $palecolor: hsla(148, 87%, 18%, 0.14901960784313725);
     $dark-font: #000;
     $gray     : #4c4c4c;
