stat-pysch data wip

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -12,7 +12,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 .tabs.grid.grid-tabs
   // Buttons to toggle on GM whisper
   input.whisper-toggle(name='attr_gm_toggle' type='hidden' value=' ')
-  button(data-i18n-title='' name='act_whisper' title='gm whisper' type='action') Whisper GM
+  button(data-i18n='' data-i18n-title='' name='act_whisper' title='gm whisper' type='action') Whisper GM
   // LOGO
   img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
   // CHARACTER SHEETS
@@ -30,9 +30,10 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 //PC SHEET
   =============================
 .pc
+  //PERSONAL DATA
   .grid.personal-data.border
     .section-header
-      h1(data-i18n='personal-data' data-i18-title='personal-data' title='personal data') personal data
+      h1(data-i18n='personal-data') personal data
     .section-body
       .grid.section-border
         h2(data-i18n='') 1. last name, first name (and alias or code name if applicable)
@@ -62,7 +63,20 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
         h2(data-i18n='') 7. education and occupational history
         label(data-i18-title="" title='education')
           input(name='attr_education' placeholder='education and occupational history' title='${education}' type='text')
-
+  //STATISTICAL & PSYCHOLOGICAL DATA
+  .grid.personal-data.border
+    .section-header
+      h1(data-i18n='') statistical data
+    .section-body
+      .grid.section-border
+        h2(data-i18n='') 8. statistics
+        h2(data-i18n='') score
+        h2(data-i18n='') x5
+        h2(data-i18n='') distinguishing features
+    //STATISTICAL DATA
+    .section-header
+      h1(data-i18n='') pyschological data 
+    //PSYCHOLOGICAL DATA
 //NOTES SHEET
   =============================
 .notes
