--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -85,12 +85,12 @@
                 };
                 height       : 2.1em;
             }
-            &::placeholder {
+            &:placeholder {
                 @include back-color($palecolor);
-                border-top: hsl(148, 87%, 18%) 0.1em dashed;
+                border: hsl(148, 87%, 18%) 0.1em dashed;
             }
-            &::-webkit-outer-spin-button,
-            &::-webkit-inner-spin-button {
+            &:-webkit-outer-spin-button,
+            &:-webkit-inner-spin-button {
               -webkit-appearance: none;
               margin: 0;
             }
