--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -73,8 +73,8 @@
     input.sheet-type[value="character"] ~ div.sheet-tabs button[name*="character"],
     input.sheet-type[value="npc"] ~ div.sheet-tabs button[name*="npc"],
     input.sheet-type[value="options"] ~ div.sheet-tabs button[name*="options"] {
-        @include back-color($accent1);
-        box-shadow: inset 0px 0px 3px 1px $accent2;
+        @include back-color($accent3);
+        box-shadow: inset 0px 0px 3px 1px $palecolor;
         color     : $accent1;
     }
 
@@ -132,7 +132,7 @@
         }
 
         h2 {
-            margin-left: 1%;
+            margin-left: 0.5em;
         }
 
         input[type="text"] {
@@ -162,50 +162,13 @@
             @include back-color($maincolor);
         }
 
+        /* PERSONAL DATA
+        ----------------------------- */
         div.sheet-personal-data {
             @include grid-area(1, 1, 3, 3);
             grid-template-columns: 3em 1fr;
 
-            div.sheet-section-border {
-                @for $i from 1 through 3 {
-                    &:nth-of-type(#{$i})  {  grid-row: $i / $i; }
-                }
-
-                &:nth-of-type(1),
-                &:nth-of-type(2)  {
-                    border-bottom: 0.15em solid $maincolor;
-                    grid-template-columns: 1fr 0.155em 1fr;
-
-                    //NAME & EMPLOYER
-                    h2:nth-of-type(1) {  grid-area: 1 / 1 / 1 / 3;  }
-                    label:nth-of-type(1)  { grid-area:  2 / 1 / 2 / 3; }
-
-                    div.sheet-vert-line { grid-area: 1 / 2 / 3 / 2;  }
-
-                    //PROFESSIONAL & NATIONALITY
-                    h2:nth-of-type(2)  { grid-area: 1 / 3 / 1 / 5;  }
-                    label:nth-of-type(2)  { grid-area: 2 / 3 / 2 / 5; }
-                }
-
-                &:nth-of-type(3) { 
-                    grid-template-columns: 1fr 0.155em 1fr 0.155em 3fr;
-
-                    //SEX
-                    h2:nth-of-type(1) { grid-area: 1 / 1 / 1 / 2; }
-                    label:nth-of-type(1)  { grid-area:  2 / 1 / 2 / 2; }
-                    div.sheet-vert-line:nth-of-type(1) { grid-area: 1 / 2 / 3 / 2; }
-
-                    //AGE
-                    h2:nth-of-type(2)  { grid-area: 1 / 3 / 1 / 5;   }
-                    label:nth-of-type(2)  { grid-area: 2 / 3 / 2 / 5; }
-                    div.sheet-vert-line:nth-of-type(2) { grid-area: 1 / 4 / 3 / 4;  }
-
-                    //EDUCATION
-                    h2:nth-of-type(3)  { grid-area: 1 / 5 / 1 / 5;   }
-                    label:nth-of-type(3)  { grid-area: 2 / 5 / 2 / 5; }
-                }
-
-            }
+            @import 'src/scss/_section_personal_data';   
         }
    }
 
