stats wip, saving

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -9,15 +9,16 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 
 //TABS & LOGO
   =============================
-.tabs.grid.grid-tabs
+.tabs.grid
   // Buttons to toggle on GM whisper
   input.whisper-toggle(name='attr_gm_toggle' type='hidden' value=' ')
-  button(data-i18n='' data-i18n-title='' name='act_whisper' title='gm whisper' type='action') Whisper GM
+  button(data-i18n-title='gm-whisper-toggle' name='act_whisper' title='gm whisper toggle' type='action') 
+   span(data-i18n='whisper-gm') Whisper GM
   // LOGO
   img(alt='Delta Green' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/deltagreen/Delta%20Green%20by%20Arc%20Dream%20Publishing/img/deltagreenlogo.jpg')
   // CHARACTER SHEETS
-  button(data-i18n='' data-i18n-title='' name='act_toggle_character' title='player character button' type='action') pc
-  button(data-i18n='' data-i18n-title='' name='act_toggle_npc' title='non-player character' type='action') npc
+  button(data-i18n-title='sheet-settings' name='act_sheet_select' title='sheet settings' type='action') 
+    span(class='pictos') y 
 
 // NPC SHEET
   =============================
@@ -35,55 +36,89 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
     .section-header
       h1(data-i18n='personal-data') personal data
     .section-body
-      .grid.section-border
-        h2(data-i18n='') 1. last name, first name (and alias or code name if applicable)
-        label(data-i18-title="" title='last name, first name (and alias or code name if applicable)')
-          input(name='attr_name' placeholder='name' title='${name}' type='text')
+      .grid.section.border-bottom
+        h2(class='aligned-left' data-i18n='1-last-name') 1. last name, first name (and alias or code name if applicable)
+        label(data-i18-title='1-last-name' title='1. last name, first name (and alias or code name if applicable)')
+          input(data-i18-placeholder='name' name='attr_name' placeholder='name' title='${name}' type='text')
         .vert-line
-        h2(data-i18n='') 2. profession (rank if applicable)
-        label(data-i18-title="" title='profession (rank if applicable)')
-          input(name='attr_profession' placeholder='profession' title='${profession}' type='text')
-      .grid.section-border
-        h2(data-i18n='') 3. employer
-        label(data-i18-title="" title='employer')
-          input(name='attr_employer' placeholder='employer' title='${employer}' type='text')
+        h2(class='aligned-left' data-i18n='2-profession') 2. profession (rank if applicable)
+        label(data-i18-title='2-profession' title='2. profession (rank if applicable)')
+          input(data-i18-placeholder='' name='attr_profession' placeholder='profession' title='${profession}' type='text')
+      .grid.section.border-bottom
+        h2(class='aligned-left' data-i18n='3-employer') 3. employer
+        label(data-i18-title='3-employer' title='3. employer')
+          input(data-i18-placeholder='employer' name='attr_employer' placeholder='employer' title='${employer}' type='text')
         .vert-line
-        h2(data-i18n='') 4. nationality
-        label(data-i18-title="" title='nationality')
-          input(name='attr_nationality' placeholder='nationality' title='${nationality}' type='text')
-      .grid.section-border
-        h2(data-i18n='') 5. sex
-        label(data-i18-title="" title='sex')
-          input(name='attr_sex' placeholder='sex' title='${sex}' type='text')
+        h2(class='aligned-left' data-i18n='4-nationality') 4. nationality
+        label(data-i18-title='4-nationality' title='4. nationality')
+          input(data-i18-placeholder='nationality' name='attr_nationality' placeholder='nationality' title='${nationality}' type='text')
+      .grid.section
+        h2(class='aligned-left' data-i18n='5-sex') 5. sex
+        label(data-i18-title='5-sex' title='5. sex')
+          input(data-i18-placeholder='sex' name='attr_sex' placeholder='sex' title='${sex}' type='text')
         .vert-line
-        h2(data-i18n='') 6. age and d.o.b.
-        label(data-i18-title="" title='age and d.o.b.')
-          input(name='attr_age' placeholder='age and d.o.b.' title='${age}' type='text')
+        h2(class='aligned-left' data-i18n='6-age') 6. age and d.o.b.
+        label(data-i18-title='6-age' title='age and d.o.b.')
+          input(data-i18-placeholder='age' name='attr_age' placeholder='age and d.o.b.' title='${age}' type='text')
         .vert-line
-        h2(data-i18n='') 7. education and occupational history
-        label(data-i18-title="" title='education')
-          input(name='attr_education' placeholder='education and occupational history' title='${education}' type='text')
-  //STATISTICAL & PSYCHOLOGICAL DATA
-  .grid.personal-data.border
+        h2(class='aligned-left' data-i18n='7-education') 7. education and occupational history
+        label(data-i18-title='7-education' title='7. education and occupational history')
+          input(data-i18-placeholder='education' name='attr_education' placeholder='education and occupational history' title='${education}' type='text')
+  //STATISTICAL DATA
+  .grid.statistical-data.border
     .section-header
-      h1(data-i18n='') statistical data
-    .section-body
-      .grid.section-border
-        h2(data-i18n='') 8. statistics
-        h2(data-i18n='') score
-        h2(data-i18n='') x5
-        h2(data-i18n='') distinguishing features
-    //STATISTICAL DATA
+      h1() statistical data
+    .grid.section-body
+      .grid.section-body-stats
+        .grid.section.border-bottom
+          h2(class='aligned-left') 8. statistics
+          .vert-line
+          h2(class='center') score
+          .vert-line
+          h2(class='center') x5
+          .vert-line
+          h2(class='aligned-left') distinguishing features
+        .grid.section.border-bottom
+          h3(class='aligned-left') Strength (STR)
+          .vert-line
+        .grid.section.border-bottom
+          h3(class='aligned-left') Constitution (CON)
+          .vert-line
+        .grid.section.border-bottom
+          h3(class='aligned-left') Dexterity (DEX)
+          .vert-line
+        .grid.section.border-bottom
+          h3(class='aligned-left') Intelligence (INT)
+          .vert-line
+        .grid.section.border-bottom
+          h3(class='aligned-left') Power (POW)
+          .vert-line
+        .grid.section.border-bottom
+          h3(class='aligned-left') Charisma (CHA)
+          .vert-line
+      .grid.section-body-derived
+        .grid.section.border-bottom
+          h2(class='aligned-left') 9. derived attributes
+          .vert-line
+          h2(class='center') maximum
+          .vert-line
+          h2(class='center') current
+          .vert-line
+  //PSYCHOLOGICAL DATA
+  .grid.pyschological-data.border
     .section-header
-      h1(data-i18n='') pyschological data 
-    //PSYCHOLOGICAL DATA
+      h1() pyschological data 
+
 //NOTES SHEET
   =============================
 .notes
 
-//OPTIONS SHEET
+//SETTINGS SHEET
   =============================
-.options
+.settings
+  select(name='attr_sheet_select' title="character sheet select" selected)
+    option(data-i18n='' value='character') character
+    option(data-i18n='' value='npc') npc
 
 //FOOTER
   =============================
