--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -68,8 +68,8 @@
         }
 
         h3 {
-            font-size: 1.25em;
-            line-height: 36px;
+            font-size: 0.8em;
+            line-height: 2em;
         }
 
         input {
