--- a/Delta Green by Arc Dream Publishing/src/scss/_mixins.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_mixins.scss
@@ -22,3 +22,12 @@
         font-weight   : bold;
         text-transform: capitalize;
     }
+
+   /* @mixin grid-loop($start, $end, $increase) {
+        @for $i from $start through $end {
+            &:nth-of-type(#{$i})  {
+                grid-area: #{$i} / #{$i} / #{$i} / #{$i};
+            }
+        }
+    } */
+
