--- a/Delta Green by Arc Dream Publishing/src/scss/_section_personal_data.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_section_personal_data.scss
@@ -1,13 +1,12 @@
 /* PERSONAL DATA
 ----------------------------- */
-div.sheet-section-border {
+div.sheet-section {
     @for $i from 1 through 3 {
         &:nth-of-type(#{$i})  {  grid-row: $i / $i; }
     }
 
     &:nth-of-type(1),
     &:nth-of-type(2)  {
-        border-bottom: 0.15em solid $maincolor;
         grid-template-columns: 1fr 0.155em 1fr;
 
         //NAME & EMPLOYER
