refactoed pug stats

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -78,24 +78,11 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
           h2(class='center') x5
           .vert-line
           h2(class='aligned-left') distinguishing features
-        .grid.section.border-bottom
-          h3(class='aligned-left') Strength (STR)
-          .vert-line
-        .grid.section.border-bottom
-          h3(class='aligned-left') Constitution (CON)
-          .vert-line
-        .grid.section.border-bottom
-          h3(class='aligned-left') Dexterity (DEX)
-          .vert-line
-        .grid.section.border-bottom
-          h3(class='aligned-left') Intelligence (INT)
-          .vert-line
-        .grid.section.border-bottom
-          h3(class='aligned-left') Power (POW)
-          .vert-line
-        .grid.section.border-bottom
-          h3(class='aligned-left') Charisma (CHA)
-          .vert-line
+        each val, key in {Strength: 'STR', Constitution: 'CON', Dexterity: 'DEX', Intelligence: 'INT', Power: 'POW', Charisma: 'CHA'}
+          .grid.section.border-bottom
+            button(name=key title=key + ' roll' type='roll' value='')
+              h3(class='aligned-left')= key + ' (' + val + ')'
+            .vert-line
       .grid.section-body-derived
         .grid.section.border-bottom
           h2(class='aligned-left') 9. derived attributes
