--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -114,8 +114,9 @@
 /* PC SHEET
    ============================= */
    div.sheet-pc {
-        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 0.2em;
         grid-row-gap: 0.2em;
+        grid-template-columns: 1fr 1fr;
 
         h1 {
            font-size: 1em;
@@ -156,7 +157,7 @@
 
             div.sheet-section-body-stats {
                 div.sheet-section {
-                    grid-template-columns: 8em 0.155em 2fr 0.155em 1fr 0.155em 14em;
+                    grid-template-columns: 9em 0.155em 2fr 0.155em 1fr 0.155em 14em;
 
                     //TOP LEVEL HEADERS; }
                     h2:nth-of-type(1) { grid-area: 1 / 1 / 1 / 1; }
@@ -171,6 +172,10 @@
 
                     //ATTRIBUTE HEADERS
                     h3 {  grid-area: 1 / 1 / 1 / 1 ; }
+
+                    button[type='roll'] {
+                        font-size: 1em;
+                    }
                 }
             }
 
