--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -6,29 +6,23 @@
     }
 
     .charsheet {
-        @include back-color($accent2);
         min-width: 30em;
 
         button {
             &:before {
                 display: none;
             }
-            &:focus,
-            &:hover,
-            &:active {
-                background: none;
-                background-color: $accent1;
+
+            &:focus > h3,
+            &:hover > h3,
+            &:active > h3 {
+                color: $accent1;
+                text-shadow: 1px 1px 2px $maincolor, 0 0 25px $accent2, 0 0 5px $accent1;
             }
 
-            &:focus > h2,
-            &:hover > h2,
-            &:active > h2 {
-                color: $accent1;
-                text-shadow: 1px 1px 2px $maincolor, 0 0 25px $accent2, 0 0 5px $accent1
-            }
-            &[type="roll"],
-            &[type="action"] {
-                @include back-color(hsl(0, 0%, 96%));
+            &[type='roll'],
+            &[type='action'] {
+                background-color: $palecolor;
                 border: {
                     bottom             : 0.01em solid #666;
                     bottom-right-radius: 0.01em;
@@ -39,6 +33,14 @@
                 }
                 margin: 0.2em !important;
                 padding: 0.1em !important;
+
+                &:focus,
+                &:hover,
+                &:active {
+                    background: none; //RESETING A DEFAULT
+                    background-color: $accent3;
+                    color: $accent1;
+                }
             }
         }
 
@@ -73,8 +75,8 @@
         }
 
         input {
-            &[type="text"],
-            &[type="number"] {
+            &[type='text'],
+            &[type='number'] {
                 @include back-color(transparent);
                 @include text-align(center);
                 border: {
