--- a/Delta Green by Arc Dream Publishing/src/scss/_variables.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_variables.scss
@@ -8,6 +8,6 @@
     $accent1  : hsl(0, 0%, 96%);
     $accent2  : hsl(24, 33%, 94%);
     $accent3  : hsl(148, 87%, 18%);
-    $palecolor: hsla(148, 87%, 18%, 0.14901960784313725);
+    $palecolor: hsla(148, 20%, 82%, 1);
     $dark-font: #000;
-    $gray     : #4c4c4c;
+    $gray     : hsl(0, 0%, 30%);
