--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -22,7 +22,7 @@
 
             &[type='roll'],
             &[type='action'] {
-                background-color: $palecolor;
+                background: $palecolor;
                 border: {
                     bottom             : 0.01em solid #666;
                     bottom-right-radius: 0.01em;
@@ -37,7 +37,6 @@
                 &:focus,
                 &:hover,
                 &:active {
-                    background: none; //RESETING A DEFAULT
                     background-color: $accent3;
                     color: $accent1;
                 }
@@ -45,23 +44,23 @@
         }
 
         div {
-            @include back-color(transparent);
+            background: transparent;
             width: 100%;
         }
 
         fieldset {
-            @include back-color(transparent);
+            background: transparent;
         }
 
         h1 {
             color: $accent1;
-            @include text-trans(uppercase);
+            text-transform: uppercase;
         }
 
         h2 {
-            @include text-trans(uppercase);
             font-size: 0.8em;
             line-height: 2em;
+            text-transform: uppercase;
             &.sheet-label {
                 @include button-like();
                 text-align: center;
@@ -77,24 +76,16 @@
         input {
             &[type='text'],
             &[type='number'] {
-                @include back-color(transparent);
-                @include text-align(center);
-                border: {
-                    left  : 0em;
-                    radius: 0em;
-                    right : 0em;
-                    top   : 0em;
-                };
+                background   : transparent;
+                border-radius: 0em;
+                border       : none;
                 height       : 2.1em;
-            }
-            &:placeholder {
-                @include back-color($palecolor);
-                border: hsl(148, 87%, 18%) 0.1em dashed;
-            }
-            &:-webkit-outer-spin-button,
-            &:-webkit-inner-spin-button {
-              -webkit-appearance: none;
-              margin: 0;
+                text-align   : center;
+
+                &:placeholder {
+                    background: $palecolor;
+                    border: $accent3 0.1em dashed;
+                }
             }
         }
 
@@ -108,17 +99,22 @@
         }
 
         textarea {
-            @include text-align(left);
-            border-bottom : 0.2em dotted $accent3;
-            font-size     : 12px;
+            background    : transparent;
+            font-size     : 1em;
             font-weight   : normal;
             height        : 50px;
-            line-height   : 18px;
+            min-height    : 5em;
             overflow      : hidden;
             overflow-wrap : break-word;
             padding       : 2px;
             resize        : vertical;
+            text-align    : left;
             vertical-align: top;
             white-space   : pre-line;
+
+            &:placeholder {
+                background: $palecolor;
+                border-bottom : 0.2em dotted $accent3;
+            }
         }
     }
