--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -22,9 +22,9 @@
         display: none;
     }   
 
-    input.sheet-type[value="npc"] ~  div.sheet-npc,
-    input.sheet-type[value="character"] ~  div.sheet-pc,
-    input.sheet-type[value="settings"] ~  div.sheet-settings  {
+    input.sheet-type[value='npc'] ~  div.sheet-npc,
+    input.sheet-type[value='character'] ~  div.sheet-pc,
+    input.sheet-type[value='settings'] ~  div.sheet-settings  {
         display: grid;
     }   
 
@@ -49,10 +49,10 @@
 
 /* HIGHLIGHT BUTTONS
    ============================= */
-    input.sheet-whisper-toggle[value*="gm"] + button[name*="whisper"],
-    input.sheet-type[value="character"] ~ div.sheet-tabs button[name*="character"],
-    input.sheet-type[value="npc"] ~ div.sheet-tabs button[name*="npc"],
-    input.sheet-type[value="settings"] ~ div.sheet-tabs button[name*="settings"] {
+    input.sheet-whisper-toggle[value*='gm'] + button[name*='whisper'],
+    input.sheet-type[value='character'] ~ div.sheet-tabs button[name*='character'],
+    input.sheet-type[value='npc'] ~ div.sheet-tabs button[name*='npc'],
+    input.sheet-type[value='settings'] ~ div.sheet-tabs button[name*='settings'] {
         @include back-color($accent3);
         box-shadow: inset 0px 0px 3px 1px $palecolor;
         color     : $accent1;
@@ -74,15 +74,15 @@
             @include grid-area(1, 2, 3, 2);
         }
 
-        button[name="attr_gm_toggle"] {
+        button[name='attr_gm_toggle'] {
             @include grid-area(1, 1, 1, 1);
         }
 
-        button[name="act_toggle_character"] {
+        button[name='act_toggle_character'] {
             @include grid-area(1, 3, 1, 3);
         }
 
-        button[name="act_toggle_npc"] {
+        button[name='act_toggle_npc'] {
             @include grid-area(2, 3, 2, 3);
         }
     }
@@ -118,15 +118,25 @@
         grid-row-gap: 0.2em;
         grid-template-columns: 1fr 1fr;
 
+        button[type='roll'] {
+            text-align: left;
+        }
+
         h1 {
            font-size: 1em;
            text-align: center;
            transform: rotate(180deg);
         }
 
-        input[type="text"] {
-            text-align: left;
-            width: 100%;    
+        input {
+            &[type='text'],
+            &[type='number'] {
+                width: 100%;
+            }
+
+            &[type='text'] {
+                text-align: left;
+            } 
         }
 
         div.sheet-section-header {
@@ -155,40 +165,42 @@
             @include grid-area(2, 1, 2, 1);
             grid-template-columns: 3em 1fr;
 
+            button[type='roll'],
+            div.sheet-derived-attr {
+                font-size: 1em;
+
+                span { font-size: 0.8em; }
+            }
+
+            h3 {
+                display: inline;
+                margin-right: 2%;
+                text-transform: capitalize;
+            }
+
+            //STATISTICS
             div.sheet-section-body-stats {
+                input[type="number"] { text-align: right; }
+
                 div.sheet-section {
                     grid-template-columns: 9em 0.155em 2fr 0.155em 1fr 0.155em 14em;
-
-                    //TOP LEVEL HEADERS; }
-                    h2:nth-of-type(1) { grid-area: 1 / 1 / 1 / 1; }
-                    h2:nth-of-type(2) { grid-area: 1 / 3 / 1 / 3; }
-                    h2:nth-of-type(3) { grid-area: 1 / 5 / 1 / 5; }
-                    h2:nth-of-type(4) { grid-area: 1 / 7 / 1 / 7; }
-
-                    //DECORATIVE VERTICAL LINES
-                    div.sheet-vert-line:nth-of-type(1)  { grid-area: 1 / 2 / 1 / 2; }
-                    div.sheet-vert-line:nth-of-type(2)  { grid-area: 1 / 4 / 1 / 4; }
-                    div.sheet-vert-line:nth-of-type(3)  { grid-area: 1 / 6 / 1 / 6; }
-
-                    //ATTRIBUTE HEADERS
-                    h3 {  grid-area: 1 / 1 / 1 / 1 ; }
-
-                    button[type='roll'] {
-                        font-size: 1em;
-                    }
                 }
             }
 
+            //DERIVED ATTRIBUTES
             div.sheet-section-body-derived {
                 div.sheet-section {
                     grid-template-columns: 12em 0.155em 1fr 0.155em 1fr;
-                    //DECORATIVE VERTICAL LINES
-                    div.sheet-vert-line:nth-of-type(1)  { grid-area: 1 / 2 / 1 / 2; }
-                    div.sheet-vert-line:nth-of-type(2)  { grid-area: 1 / 4 / 1 / 4; }
                 }
             }
-        }
 
+            //PHYSICAL DESCRIPTION
+            div.sheet-section-body-physical {
+                h2 {grid-row: 1 / 1}
+                textarea {grid-row: 2 / 2}
+            }
+
+        }
 
         /* PSYCHOLOGICAL DATA
         ----------------------------- */
