--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -172,6 +172,8 @@
                 span { font-size: 0.8em; }
             }
 
+            h2:nth-of-type(2) { text-transform: lowercase; }
+
             h3 {
                 display: inline;
                 margin-right: 2%;
@@ -179,23 +181,27 @@
             }
 
             //STATISTICS
-            div.sheet-section-body-stats {
+            div.sheet-section-stats {
                 input[type="number"] { text-align: right; }
 
                 div.sheet-section {
                     grid-template-columns: 9em 0.155em 2fr 0.155em 1fr 0.155em 14em;
+
+                    span.sheet-center {
+                        padding-top: 25%;
+                    }
                 }
             }
 
             //DERIVED ATTRIBUTES
-            div.sheet-section-body-derived {
+            div.sheet-section-derived {
                 div.sheet-section {
                     grid-template-columns: 12em 0.155em 1fr 0.155em 1fr;
                 }
             }
 
             //PHYSICAL DESCRIPTION
-            div.sheet-section-body-physical {
+            div.sheet-section-physical {
                 h2 {grid-row: 1 / 1}
                 textarea {grid-row: 2 / 2}
             }
@@ -205,17 +211,28 @@
         /* PSYCHOLOGICAL DATA
         ----------------------------- */
         div.sheet-pyschological-data {
+            grid-template-rows: min-content;
+
             @include grid-area(2, 2, 2, 2);
             grid-template-columns: 3em 1fr;
             
+            div.sheet-section-bonds {
+                div.sheet-max-height {
+                    max-height: 1.8em;
+                }
+
+                div.sheet-section {
+                    grid-template-columns: 25em 0.155em 1fr;
+                }
+            }
         }
 
    }
 
 
-   /* ATTRIBUTES
-   ----------------------------- */
-
+// REPEATING SECTIONS
+//    =============================
+    @import 'src/scss/_repcontrol';   
 
 /* FOOTER
    ============================= */
