--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -64,20 +64,20 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
         h2(class='aligned-left' data-i18n='7-education') 7. education and occupational history
         label(data-i18-title='7-education' title='7. education and occupational history')
           input(data-i18-placeholder='education' name='attr_education' placeholder='education and occupational history' title='${education}' type='text')
+  
   //STATISTICAL DATA
   .grid.statistical-data.border
     .section-header
       h1() statistical data
     //STATISTICS
     .grid.section-body
-      .grid.section-body-stats
+      .grid.section-stats
         .grid.section.border-bottom
           h2(class='aligned-left') 8. statistics
           .vert-line
-          h2(class='center') score
-          .vert-line
-          h2(class='center') x5
-          .vert-line
+          each string in ['score', 'x5']
+            h2(class='center')= string
+            .vert-line
           h2(class='aligned-left') distinguishing features
         each val, key in {strength: 'STR', constitution: 'CON', dexterity: 'DEX', intelligence: 'INT', power: 'POW', charisma: 'CHA'}
           .grid.section.border-bottom
@@ -85,20 +85,21 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
               h3(class='aligned-left')= key
               span()= '(' + val + ')'
             .vert-line
-            input(name='attr_' + key + '_score' placeholder='10' title='@{' + key + '_score' + '}' type="number")
+            label(title=key + ' score')
+              input(name='attr_' + key + '_score' placeholder='10' title='@{' + key + '_score' + '}' type="number")
             .vert-line
             span(class='center' name='attr_' + key title='@{' + key + '}')
             .vert-line
-            input(name='attr_' + key + '_features' placeholder='distinguishing features' title='@{' + key + '_features' + '}' type="text")
+            label(title=key + ' distinguishing features')
+              input(name='attr_' + key + '_features' placeholder='distinguishing features' title='@{' + key + '_features' + '}' type="text")
             input(name='attr_' + key type='hidden' value='50')
       //DERIVED ATTRIBUTES
-      .grid.section-body-derived
+      .grid.section-derived
         .grid.section.border-bottom
           h2(class='aligned-left') 9. derived attributes
-          .vert-line
-          h2(class='center') maximum
-          .vert-line
-          h2(class='center') current
+          each string in ['maximum', 'current']
+            .vert-line
+            h2(class='center')= string
         each val, key in {'hit points': 'HP', 'willpower points': 'WP', 'sanity points': 'SAN', 'breaking points': 'BP'}
           - var attrName = key.replace(' ','_');
           .grid.section.border-bottom
@@ -108,9 +109,10 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
             .vert-line
             span(class='center' name='attr_' + attrName + '_max' title='@{' + attrName + '_max' + '}')
             .vert-line
-            input(name='attr_' + attrName placeholder='10' title='@{' + attrName + '}' type="number")
+            label(title=key)
+              input(name='attr_' + attrName placeholder='10' title='@{' + attrName + '}' type="number")
       //PHYSICAL DESCRIPTION
-      .grid.section-body-physical
+      .grid.section-physical
         h2(class='aligned-left') 9. physical description
         textarea(name='attr_physical_description' placeholder='physical description' title='@{physical_description}')
 
@@ -118,6 +120,32 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
   .grid.pyschological-data.border
     .section-header
       h1() pyschological data 
+    .grid.section-body
+      .grid.section-bonds
+        .grid.section.border-bottom.max-height
+          h2(class='aligned-left') 11. bonds
+          .vert-line
+          h2(class='center') score
+        fieldset(class='repeating_bonds')
+          .grid.section.border-bottom
+            label(title='bond name')
+              input(name='attr_name' placeholder='bond' title='@{repeating_bonds_${x}_name}' type="text")
+            .vert-line
+            label(title='bond score')
+              input(name='attr_score' placeholder='10' title='@{repeating_bonds_${x}_score}' type="number")
+      .grid.section-motivations
+        .grid.section.border-bottom
+          h2(class='aligned-left') 12. motivations and mental disorders
+          textarea(name='attr_motivations')
+      .grid.section-incidents
+        .grid.section.border-bottom
+          h2(class='aligned-left') 13. incidents of san loss without going insane
+          - var i = 0;
+          .grid.section.border-bottom
+            while i < 3
+              label(title="violence checkbox " + ++i)
+                input(name='attr_violence' title='@{repeating_bonds_${x}_violence}' type="checkbox" value=i)
+                span()
 
 //NOTES SHEET
 // =============================
