--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -126,13 +126,14 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
           h2(class='aligned-left') 11. bonds
           .vert-line
           h2(class='center') score
-        fieldset(class='repeating_bonds')
-          .grid.section.border-bottom
-            label(title='bond name')
-              input(name='attr_name' placeholder='bond' title='@{repeating_bonds_${x}_name}' type="text")
-            .vert-line
-            label(title='bond score')
-              input(name='attr_score' placeholder='10' title='@{repeating_bonds_${x}_score}' type="number")
+        .grid.section
+          fieldset(class='repeating_bonds')
+            .grid.section.border-bottom
+              label(title='bond name')
+                input(name='attr_name' placeholder='bond' title='@{repeating_bonds_${x}_name}' type="text")
+              .vert-line
+              label(title='bond score')
+                input(name='attr_score' placeholder='10' title='@{repeating_bonds_${x}_score}' type="number")
       .grid.section-motivations
         .grid.section.border-bottom
           h2(class='aligned-left') 12. motivations and mental disorders
