fixed SchiPs calculation and appearance

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
@@ -205,7 +205,7 @@ input[type="text"].sheet-title_name {
 .sheet-common_header4 {
 	grid-column: 4 /4;
 	grid-row: 1 /1;
-	background-color: #c2c2d6;
+	background-color: #7c9bc4;
 	color: #000;
 }
 
@@ -276,7 +276,7 @@ input[type="text"].sheet-title_name {
 	grid-column: 6 /6;
 	grid-row: 2 /2;
 	background-color: #0000ff;
-	color: #000;
+	color: #ffffff;
 }
 
 .sheet-common_header15 {
