added new type for sonderfertigkeiten

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
@@ -2893,7 +2893,8 @@ input.sheet-sonderfertigkeit-cb0:checked~.sheet-sonderfertigkeit-filtered,      
 .sheet-sonderfertigkeit-cb5:checked~.sheet-sonderfertigkeitliste>fieldset.repeating_sonderfertigkeit+.repcontainer>.repitem input.sheet-sonderfertigkeit-cb5:checked~.sheet-sonderfertigkeit-filtered,
 .sheet-sonderfertigkeit-cb6:checked~.sheet-sonderfertigkeitliste>fieldset.repeating_sonderfertigkeit+.repcontainer>.repitem input.sheet-sonderfertigkeit-cb6:checked~.sheet-sonderfertigkeit-filtered,
 .sheet-sonderfertigkeit-cb7:checked~.sheet-sonderfertigkeitliste>fieldset.repeating_sonderfertigkeit+.repcontainer>.repitem input.sheet-sonderfertigkeit-cb7:checked~.sheet-sonderfertigkeit-filtered,
-.sheet-sonderfertigkeit-cb8:checked~.sheet-sonderfertigkeitliste>fieldset.repeating_sonderfertigkeit+.repcontainer>.repitem input.sheet-sonderfertigkeit-cb8:checked~.sheet-sonderfertigkeit-filtered {
+.sheet-sonderfertigkeit-cb8:checked~.sheet-sonderfertigkeitliste>fieldset.repeating_sonderfertigkeit+.repcontainer>.repitem input.sheet-sonderfertigkeit-cb8:checked~.sheet-sonderfertigkeit-filtered,
+.sheet-sonderfertigkeit-cb9:checked~.sheet-sonderfertigkeitliste>fieldset.repeating_sonderfertigkeit+.repcontainer>.repitem input.sheet-sonderfertigkeit-cb9:checked~.sheet-sonderfertigkeit-filtered {
   display: block;
 }
 
